--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -9,3 +9,11 @@ $border2: #00f96c;
 $formBoxShadow: #719ECE;
 $fontFamily1: 'Open Sans', sans-serif;
 $fontFamily2: 'Montserrat', sans-serif;
+
+// Loader
+
+$m-01: #3c4359;
+$m-02: #546c8c;
+$m-03: #7ea1bf;
+$m-04: #bacbd9;
+$m-05: #bf80a9;
