--- a/styles/style.css
+++ b/styles/style.css
@@ -25,7 +25,7 @@ ul {
   list-style-type: none;
 }
 
-header .header, header .header .nav, .back-to div a, .about-me, .skills, .contact-me, .footer, .about-me__passions, .circle-bars-container, .contact-me .contact-form, .footer .social-media-container {
+header .header .nav, header .header .nav .menu-items, .back-to div a, .about-me, .skills, .contact-me, .footer, .about-me__passions, .circle-bars-container, .contact-me .contact-form, .footer .social-media-container {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -403,14 +403,19 @@ header .header img {
 
 header .header .nav {
   width: 100%;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
   font-family: "Montserrat", sans-serif;
 }
 
-header .header .nav li {
-  margin-left: 2rem;
+header .header .nav .menu-items {
+  width: 30vw;
+}
+
+header .header .nav #nav-icon {
+  display: none;
+}
+
+header .header .nav .link-icon {
+  display: none;
 }
 
 header .header .nav a {
@@ -424,6 +429,15 @@ header .header .nav a {
 header .header .nav a:hover, header .header .nav a.active {
   background: #ffffff;
   color: #2b1055;
+}
+
+header .header .nav #logo {
+  display: inline-block;
+}
+
+header .header .nav #logo:hover {
+  background: none;
+  color: none;
 }
 
 header section {
@@ -1216,6 +1230,121 @@ header::before {
   }
   100% {
     background-position: 0%;
+  }
+}
+
+/* Extra small devices (phones, 600px and down) */
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (max-width: 768px) {
+  header .header {
+    position: absolute;
+    width: 100%;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    padding: 3rem 10rem;
+    background: transparent;
+    z-index: 1000;
+  }
+  header .header img {
+    width: 55px;
+    height: 65px;
+  }
+  header .header .nav {
+    width: 100%;
+    height: 100%;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-align: end;
+        -ms-flex-align: end;
+            align-items: flex-end;
+    padding-right: 5rem;
+  }
+  header .header .nav #logo {
+    -ms-flex-item-align: self-start;
+        -ms-grid-row-align: self-start;
+        align-self: self-start;
+  }
+  header .header .nav .menu-items {
+    -ms-flex-item-align: center;
+        -ms-grid-row-align: center;
+        align-self: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: end;
+        -ms-flex-pack: end;
+            justify-content: flex-end;
+    -webkit-box-align: end;
+        -ms-flex-align: end;
+            align-items: flex-end;
+    width: auto;
+  }
+  header .header .nav .opened {
+    width: auto;
+    height: auto;
+  }
+  header .header .nav #nav-icon {
+    display: block;
+    font-size: 2rem;
+    cursor: pointer;
+    -ms-flex-item-align: center;
+        -ms-grid-row-align: center;
+        align-self: center;
+  }
+  header .header .nav .link-icon {
+    display: inline-block;
+  }
+  header .header .nav__items {
+    display: none;
+  }
+  header .header .nav a {
+    padding: 1rem 1.5rem;
+    color: #E5E5E5;
+    font-size: 1.3rem;
+    font-weight: 700;
+    border-radius: 20px;
+  }
+  header .header .nav a:hover, header .header .nav a.active {
+    background: #ffffff;
+    color: #2b1055;
+  }
+  header .header .nav .link-icon {
+    -webkit-transform: rotate(90deg);
+            transform: rotate(90deg);
+  }
+  header section #AbdurasulDjurayev {
+    font-size: 5rem;
+  }
+  .skills {
+    padding: auto;
+  }
+  .circle-bars-container {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .footer p {
+    margin-bottom: 2.5rem;
+  }
+  .footer p i, .footer p span {
+    font-size: 1.7rem;
+  }
+}
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (max-width: 900px) {
+  header .header {
+    padding: 3rem 5rem;
+  }
+  .about-me {
+    padding: 0rem 5rem 0 5rem;
+  }
+  .skills {
+    padding: 0rem 12rem 0 12rem;
   }
 }
 /*# sourceMappingURL=style.css.map */
