--- a/styles/style.scss
+++ b/styles/style.scss
@@ -280,7 +280,7 @@ header {
         background-attachment: fixed;
         padding: 3rem 10rem ;
         background: transparent;
-        @extend %flex-space-between;
+        // @extend %flex-space-between;
         z-index: 1000;
         img {
             width: 55px;
@@ -290,11 +290,21 @@ header {
         .nav {
             width: 100%;
             @extend %flex-space-between;
-            justify-content: center;
             font-family: $fontFamily2;
-            li {
-                margin-left: 2rem;
+
+            .menu-items {
+                @extend %flex-space-between;
+                width: 30vw;
             }
+            
+            #nav-icon {
+                display: none;
+            }   
+
+            .link-icon {
+                display: none;
+            }
+
             a {
                 padding: 1rem 1.5rem;
                 color: $white;
@@ -307,7 +317,14 @@ header {
                 background: $pureWhite;
                 color: $gradient1;
             }
-        }
+            #logo {
+                display: inline-block;
+            }
+            #logo:hover {
+                background: none;
+                color: none;;
+            }
+        }     
     }
 
     section {
@@ -969,4 +986,133 @@ header::before {
             }
         }
     }
+}
+
+// media queries
+
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+
+}
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (max-width: 768px) {
+    
+    header {
+        .header {
+            position: absolute;
+            width: 100%;
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-attachment: fixed;
+            padding: 3rem 10rem ;
+            background: transparent;
+            z-index: 1000;
+            img {
+                width: 55px;
+                height: 65px;
+            }
+
+            .nav {
+                width: 100%;
+                height: 100%;
+                flex-direction: row;
+                align-items: flex-end;
+                padding-right: 5rem;
+
+                #logo {
+                    align-self: self-start;
+                }
+
+                .menu-items { 
+                    align-self: center;
+                    flex-direction: column;
+                    justify-content: flex-end;
+                    align-items: flex-end;
+                    width: auto;
+                }
+
+                .opened {
+                    width: auto;
+                    height: auto;
+                }
+
+                li {
+                    // margin: 1rem 0;
+                    // float: right;
+                    // display: block;
+                }
+
+                #nav-icon {
+                    display: block;
+                    font-size: 2rem;
+                    cursor: pointer;
+                    align-self: center;
+                }
+
+                .link-icon {
+                    display: inline-block;
+                }
+
+                &__items {
+                    display: none;
+                }
+
+                a {
+                    padding: 1rem 1.5rem;
+                    color: $white;
+                    font-size: 1.3rem;
+                    font-weight: 700;
+                    border-radius: 20px;
+                }
+            
+                a:hover, a.active {
+                    background: $pureWhite;
+                    color: $gradient1;
+                }
+
+                .link-icon {
+                    transform: rotate(90deg);
+                }
+            }
+
+            
+        }
+
+        section #AbdurasulDjurayev {
+            font-size: 5rem;
+        }
+    }
+
+    .skills {
+        padding: auto;
+    }
+
+    .circle-bars-container {
+        justify-content: center;
+    }
+
+    .footer {
+        p {
+        margin-bottom: 2.5rem;
+
+            i, span {
+                font-size: 1.7rem;
+            }
+        }
+    }
+}
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (max-width: 900px) {
+    header .header {
+        padding: 3rem 5rem;
+    }
+    .about-me {
+        padding: 0rem 5rem 0 5rem;
+    }
+    .skills {
+        padding: 0rem 12rem 0 12rem;
+    }
+
 }
