--- a/styles/style.css
+++ b/styles/style.css
@@ -25,7 +25,7 @@ ul {
   list-style-type: none;
 }
 
-header .header .nav, header .header .nav .menu-items, .back-to div a, .about-me, .skills, .contact-me, .footer, .about-me__passions, .circle-bars-container, .contact-me .contact-form, .footer .social-media-container {
+header .header, header .header .nav, .back-to div a, .about-me, .skills, .contact-me, .footer, .about-me__passions, .circle-bars-container, .contact-me .contact-form, .footer .social-media-container {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -401,13 +401,29 @@ header .header img {
   height: 65px;
 }
 
+header .header .menu {
+  background: #16124050;
+  height: auto;
+  width: auto;
+}
+
 header .header .nav {
   width: 100%;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
   font-family: "Montserrat", sans-serif;
 }
 
-header .header .nav .menu-items {
-  width: 30vw;
+header .header .nav li {
+  margin-left: 1rem;
+}
+
+header .header .nav .margin-top {
+  margin-top: 2.2rem;
 }
 
 header .header .nav #nav-icon {
@@ -1236,52 +1252,22 @@ header::before {
 /* Extra small devices (phones, 600px and down) */
 /* Medium devices (landscape tablets, 768px and up) */
 @media only screen and (max-width: 768px) {
-  header .header {
-    position: absolute;
-    width: 100%;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-attachment: fixed;
-    padding: 3rem 10rem;
-    background: transparent;
-    z-index: 1000;
-  }
-  header .header img {
-    width: 55px;
-    height: 65px;
-  }
-  header .header .nav {
-    width: 100%;
+  header .header .logo-container {
     height: 100%;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
-    -webkit-box-align: end;
-        -ms-flex-align: end;
-            align-items: flex-end;
-    padding-right: 5rem;
-  }
-  header .header .nav #logo {
     -ms-flex-item-align: self-start;
         -ms-grid-row-align: self-start;
         align-self: self-start;
   }
-  header .header .nav .menu-items {
-    -ms-flex-item-align: center;
-        -ms-grid-row-align: center;
-        align-self: center;
+  header .header .nav {
+    width: 100%;
+    height: 100%;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
-    -webkit-box-pack: end;
-        -ms-flex-pack: end;
-            justify-content: flex-end;
     -webkit-box-align: end;
         -ms-flex-align: end;
             align-items: flex-end;
-    width: auto;
   }
   header .header .nav .opened {
     width: auto;
@@ -1291,9 +1277,8 @@ header::before {
     display: block;
     font-size: 2rem;
     cursor: pointer;
-    -ms-flex-item-align: center;
-        -ms-grid-row-align: center;
-        align-self: center;
+    -ms-flex-item-align: end;
+        align-self: flex-end;
   }
   header .header .nav .link-icon {
     display: inline-block;
