--- a/styles/style.css
+++ b/styles/style.css
@@ -1269,6 +1269,17 @@ header::before {
   header section h2#AbdurasulDjurayev {
     font-size: 2.5rem;
   }
+  .contact-me {
+    margin-left: 0;
+    margin-right: 0;
+    padding-left: 0;
+    padding-right: 0;
+  }
+  .footer .social-media-container {
+    gap: 1rem;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
 }
 
 /* Extra small devices (phones, 600px and down) */
