--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1001,6 +1001,20 @@ header::before {
             font-size: 2.5rem;
         }
     }
+
+    .contact-me {
+        margin-left: 0;
+        margin-right: 0;
+        padding-left: 0;
+        padding-right: 0;
+    }
+
+    .footer {    
+        .social-media-container {
+            gap: 1rem;
+            flex-wrap: wrap;
+        }
+    }
 }
 
 /* Extra small devices (phones, 600px and down) */
