--- a/styles/style.css
+++ b/styles/style.css
@@ -379,10 +379,27 @@ header .header, header .header .nav, .back-to div a, .about-me, .skills, .contac
   }
 }
 
+.menu {
+  content: '';
+  width: 100%;
+  height: 0;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 100;
+  background: #16124090;
+  -webkit-transition: height 2s;
+  transition: height 2s;
+}
+
 header {
   background: -webkit-gradient(linear, left top, left bottom, from(#2b1055), to(#7597de));
   background: linear-gradient(#2b1055, #7597de);
   min-height: 100vh;
+}
+
+header .position-fixed {
+  position: fixed !important;
 }
 
 header .header {
@@ -401,20 +418,9 @@ header .header img {
   height: 65px;
 }
 
-header .header .menu {
-  height: 100%;
-  width: 100%;
-}
-
-header .header .menu::before {
-  content: '';
-  width: 100vw;
-  height: 100vh;
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: 1;
-  background: #16124050;
+header .header #logo {
+  position: relative;
+  z-index: 3;
 }
 
 header .header .nav {
@@ -442,6 +448,10 @@ header .header .nav #nav-icon {
   display: none;
 }
 
+header .header .nav #nav-icon:active {
+  color: red;
+}
+
 header .header .nav .link-icon {
   display: none;
 }
@@ -457,15 +467,6 @@ header .header .nav a {
 header .header .nav a:hover, header .header .nav a.active {
   background: #ffffff;
   color: #2b1055;
-}
-
-header .header .nav #logo {
-  display: inline-block;
-}
-
-header .header .nav #logo:hover {
-  background: none;
-  color: none;
 }
 
 header section {
@@ -1283,7 +1284,7 @@ header::before {
   }
   .footer .social-media-container .tooltip {
     font-size: 1rem;
-    padding: 0.5rem;
+    padding: 0.7rem;
     border: 1px solid #00f96c;
     width: 4rem;
     height: auto;
