--- a/styles/style.css
+++ b/styles/style.css
@@ -392,6 +392,15 @@ header .header, header .header .nav, .back-to div a, .about-me, .skills, .contac
   transition: height 2s;
 }
 
+.show {
+  -webkit-transition: opacity 400ms;
+  transition: opacity 400ms;
+}
+
+.hide {
+  opacity: 0;
+}
+
 header {
   background: -webkit-gradient(linear, left top, left bottom, from(#2b1055), to(#7597de));
   background: linear-gradient(#2b1055, #7597de);
