--- a/styles/style.scss
+++ b/styles/style.scss
@@ -321,17 +321,13 @@ header {
                 margin-left: 1rem;
             }
 
-            &__items {
-                // opacity: 1;
-                // transition: all 2s ;
-            }
-
             .margin-top {
                 margin-top: 2.2rem;
             }
 
             #nav-icon {
                 display: none;
+                transition: transform 2s;
             }
 
             #nav-icon:active {
