--- a/styles/style.css
+++ b/styles/style.css
@@ -545,6 +545,7 @@ header::before {
   content: '';
   position: absolute;
   bottom: 0;
+  left: 0;
   width: 100%;
   height: 10rem;
   background: -webkit-gradient(linear, left bottom, left top, from(#161240), to(transparent));
