--- a/styles/style.scss
+++ b/styles/style.scss
@@ -415,6 +415,7 @@ header::before {
     content: '';
     position: absolute;
     bottom: 0;
+    left: 0;
     width: 100%;
     height: 10rem;
     background: linear-gradient(to top, $background, transparent);
