--- a/styles/style.scss
+++ b/styles/style.scss
@@ -282,7 +282,8 @@ ul {
 
 header {
     background: linear-gradient($gradient1, $gradient2);
-    min-height: 100vh;
+    min-height: 90vh;
+    max-height: 90vh;
 
     .position-fixed {
         position: fixed !important;
@@ -529,6 +530,7 @@ header::before {
 }
 
 .about-me {  
+    margin-top: 10vh;
     &__text , &__text2 {
         margin-bottom: 8rem;
     }
