--- a/styles/style.scss
+++ b/styles/style.scss
@@ -530,7 +530,7 @@ header::before {
 }
 
 .about-me {  
-    padding-top: 10vh;
+    margin-top: 10vh;
     &__text , &__text2 {
         margin-bottom: 8rem;
     }
