--- a/styles/style.css
+++ b/styles/style.css
@@ -395,7 +395,8 @@ header .header, header .header .nav, .back-to div a, .about-me, .skills, .contac
 header {
   background: -webkit-gradient(linear, left top, left bottom, from(#2b1055), to(#7597de));
   background: linear-gradient(#2b1055, #7597de);
-  min-height: 100vh;
+  min-height: 90vh;
+  height: 100%;
   max-height: 100vh;
 }
 
@@ -738,6 +739,10 @@ header::before {
   padding: 10rem 20rem 0 20rem;
   text-align: center;
   color: #E5E5E5;
+}
+
+.about-me {
+  padding-top: 5rem;
 }
 
 .about-me__text, .about-me__text2 {
