--- a/styles/style.css
+++ b/styles/style.css
@@ -398,6 +398,7 @@ header {
   min-height: 90vh;
   height: 100%;
   max-height: 100vh;
+  overflow: hidden;
 }
 
 header .position-fixed {
@@ -743,6 +744,7 @@ header::after {
 
 .about-me {
   padding-top: 5rem;
+  overflow: hidden;
 }
 
 .about-me__text, .about-me__text2 {
