--- a/styles/style.css
+++ b/styles/style.css
@@ -398,6 +398,7 @@ header {
   min-height: 90vh;
   height: 100%;
   max-height: 100vh;
+  width: 100%;
   overflow: hidden;
 }
 
@@ -745,6 +746,8 @@ header::after {
 .about-me {
   padding-top: 5rem;
   overflow: hidden;
+  width: 100%;
+  height: 100%;
 }
 
 .about-me__text, .about-me__text2 {
