--- a/styles/style.scss
+++ b/styles/style.scss
@@ -285,6 +285,7 @@ header {
     min-height: 90vh;
     height: 100%;
     max-height: 100vh;
+    width: 100%;
     overflow: hidden;
 
     .position-fixed {
@@ -534,6 +535,9 @@ header::after {
 .about-me {  
     padding-top: 5rem;
     overflow: hidden;
+    width: 100%;
+    height: 100%;
+    
     &__text , &__text2 {
         margin-bottom: 8rem;
     }
