--- a/styles/style.css
+++ b/styles/style.css
@@ -552,8 +552,8 @@ header::after {
   left: 0;
   width: 100%;
   height: 10rem;
-  background: -webkit-gradient(linear, left bottom, left top, from(#161240), to(transparent));
-  background: linear-gradient(to top, #161240, transparent);
+  background: -webkit-gradient(linear, left bottom, left top, from(blue), to(transparent));
+  background: linear-gradient(to top, blue, transparent);
   z-index: 100;
 }
 
