--- a/styles/style.scss
+++ b/styles/style.scss
@@ -422,7 +422,7 @@ header::after {
     left: 0;
     width: 100%;
     height: 10rem;
-    background: linear-gradient(to top, $background, transparent);
+    background: linear-gradient(to top, blue, transparent);
     z-index: 100;
 }
 
@@ -537,7 +537,7 @@ header::after {
     overflow: hidden;
     width: 100%;
     height: 100%;
-    
+
     &__text , &__text2 {
         margin-bottom: 8rem;
     }
