--- a/styles/style.css
+++ b/styles/style.css
@@ -545,7 +545,7 @@ header section #explore {
           box-shadow: 2px 2px 10px #2b1055, -2px -2px 10px #ffffff;
 }
 
-header::after {
+#transparent-bottom {
   content: '';
   position: absolute;
   bottom: 0;
