--- a/styles/style.css
+++ b/styles/style.css
@@ -549,6 +549,7 @@ header section #explore {
   content: '';
   position: absolute;
   bottom: 0;
+  overflow: hidden;
   left: 0;
   width: 100%;
   height: 10rem;
