--- a/styles/style.scss
+++ b/styles/style.scss
@@ -419,6 +419,7 @@ header {
     content: '';
     position: absolute;
     bottom: 0;
+    overflow: hidden;
     left: 0;
     width: 100%;
     height: 10rem;
