--- a/styles/style.scss
+++ b/styles/style.scss
@@ -415,17 +415,17 @@ header {
     }
 }
 
-#transparent-bottom {
-    content: '';
-    position: absolute;
-    bottom: 0;
-    overflow: hidden;
-    left: 0;
-    width: 100%;
-    height: 10rem;
-    background: linear-gradient(to top, $background, transparent);
-    z-index: 100;
-}
+// #transparent-bottom {
+//     content: '';
+//     position: absolute;
+//     bottom: 0;
+//     overflow: hidden;
+//     left: 0;
+//     width: 100%;
+//     height: 10rem;
+//     background: linear-gradient(to top, $background, transparent);
+//     z-index: 100;
+// }
 
 .back-to {
     position: fixed;
