--- a/styles/style.css
+++ b/styles/style.css
@@ -397,7 +397,7 @@ header {
   background: linear-gradient(#2b1055, #7597de);
   min-height: 80vh;
   height: 100%;
-  max-height: 150vh;
+  max-height: 100vh;
   width: 100%;
   overflow: hidden;
 }
@@ -502,6 +502,7 @@ header section img {
   -o-object-fit: cover;
      object-fit: cover;
   pointer-events: none;
+  overflow: hidden;
 }
 
 header section img#moon {
@@ -543,6 +544,19 @@ header section #explore {
           transform: translateY(10rem);
   -webkit-box-shadow: 2px 2px 10px #2b1055, -2px -2px 10px #ffffff;
           box-shadow: 2px 2px 10px #2b1055, -2px -2px 10px #ffffff;
+}
+
+#transparent-bottom {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  overflow: hidden;
+  left: 0;
+  width: 100%;
+  height: 10rem;
+  background: -webkit-gradient(linear, left bottom, left top, from(#161240), to(transparent));
+  background: linear-gradient(to top, #161240, transparent);
+  z-index: 100;
 }
 
 .back-to {
@@ -1305,6 +1319,9 @@ header section #explore {
 
 /* Medium devices (landscape tablets, 768px and up) */
 @media only screen and (max-width: 768px) {
+  header section img {
+    height: 90%;
+  }
   header .header .logo-container {
     height: 100%;
     -ms-flex-item-align: self-start;
