--- a/styles/style.scss
+++ b/styles/style.scss
@@ -284,7 +284,7 @@ header {
     background: linear-gradient($gradient1, $gradient2);
     min-height: 80vh;
     height: 100%;
-    max-height: 150vh;
+    max-height: 100vh;
     width: 100%;
     overflow: hidden;
 
@@ -373,6 +373,7 @@ header {
             height: 100%;
             object-fit: cover;
             pointer-events: none;
+            overflow: hidden;
 
             &#moon {
                 mix-blend-mode: screen;
@@ -415,17 +416,17 @@ header {
     }
 }
 
-// #transparent-bottom {
-//     content: '';
-//     position: absolute;
-//     bottom: 0;
-//     overflow: hidden;
-//     left: 0;
-//     width: 100%;
-//     height: 10rem;
-//     background: linear-gradient(to top, $background, transparent);
-//     z-index: 100;
-// }
+#transparent-bottom {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    overflow: hidden;
+    left: 0;
+    width: 100%;
+    height: 10rem;
+    background: linear-gradient(to top, $background, transparent);
+    z-index: 100;
+}
 
 .back-to {
     position: fixed;
@@ -1061,6 +1062,13 @@ header {
 @media only screen and (max-width: 768px) {
     
     header {
+        section {
+            img {
+                // transform: scale(0.8, 0.8);
+                height: 90%;
+            }
+        }
+
         .header {
 
             .logo-container {
