--- a/styles/style.css
+++ b/styles/style.css
@@ -1319,8 +1319,8 @@ header section #explore {
 
 /* Medium devices (landscape tablets, 768px and up) */
 @media only screen and (max-width: 768px) {
-  header section img {
-    height: 90%;
+  header {
+    width: 90%;
   }
   header .header .logo-container {
     height: 100%;
