--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1062,7 +1062,7 @@ header {
 @media only screen and (max-width: 768px) {
     
     header {
-        width: 90%;
+        height: 90%;
         section {
             img {
                 // transform: scale(0.8, 0.8);
