--- a/styles/style.css
+++ b/styles/style.css
@@ -1320,7 +1320,7 @@ header section #explore {
 /* Medium devices (landscape tablets, 768px and up) */
 @media only screen and (max-width: 768px) {
   header {
-    width: 90%;
+    height: 90%;
   }
   header .header .logo-container {
     height: 100%;
