--- a/styles/style.scss
+++ b/styles/style.scss
@@ -286,7 +286,6 @@ header {
     height: 100%;
     max-height: 100vh;
     width: 100%;
-    overflow: hidden;
 
     .position-fixed {
         position: fixed !important;
@@ -358,7 +357,6 @@ header {
     }
 
     section {
-        overflow: hidden ;
         position: relative;
         width: 100%;
         height: 100vh;
@@ -1062,7 +1060,7 @@ header {
 @media only screen and (max-width: 768px) {
     
     header {
-        height: 92.5vh;
+        // height: 92.5vh;
         section {
             img {
                 // transform: scale(0.8, 0.8);
