--- a/styles/style.scss
+++ b/styles/style.scss
@@ -286,7 +286,7 @@ header {
     height: 100%;
     max-height: 100vh;
     width: 100%;
-
+    overflow: hidden;
     .position-fixed {
         position: fixed !important;
     }
