--- a/styles/style.scss
+++ b/styles/style.scss
@@ -284,7 +284,7 @@ header {
     background: linear-gradient($gradient1, $gradient2);
     min-height: 80vh;
     height: 100%;
-    max-height: 100vh;
+    // max-height: 100vh;
     width: 100%;
     overflow: hidden;
     .position-fixed {
@@ -1061,12 +1061,6 @@ header {
     
     header {
         // height: 92.5vh;
-        section {
-            img {
-                // transform: scale(0.8, 0.8);
-                // height: 90%;
-            }
-        }
 
         .header {
 
