--- a/styles/style.css
+++ b/styles/style.css
@@ -397,6 +397,7 @@ header {
   background: linear-gradient(#2b1055, #7597de);
   min-height: 80vh;
   height: 100%;
+  max-height: 100vh;
   width: 100%;
   overflow: hidden;
 }
@@ -741,6 +742,10 @@ header section #explore {
   padding: 10rem 20rem 0 20rem;
   text-align: center;
   color: #E5E5E5;
+}
+
+.about-me {
+  overflow: hidden;
 }
 
 .about-me__text, .about-me__text2 {
