--- a/styles/style.scss
+++ b/styles/style.scss
@@ -284,7 +284,7 @@ header {
     background: linear-gradient($gradient1, $gradient2);
     min-height: 80vh;
     height: 100%;
-    // max-height: 100vh;
+    max-height: 100vh;
     width: 100%;
     overflow: hidden;
     .position-fixed {
@@ -533,7 +533,7 @@ header {
 }
 
 .about-me {  
-    
+    overflow: hidden;
     &__text , &__text2 {
         margin-bottom: 8rem;
     }
