again gradient fix

--- a/styles/style.css
+++ b/styles/style.css
@@ -1377,6 +1377,9 @@ header section #explore {
   header section #AbdurasulDjurayev {
     font-size: 5rem;
   }
+  #transparent-bottom {
+    height: 5rem;
+  }
   .skills {
     padding: auto;
   }
