--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1127,6 +1127,10 @@ header {
         }
     }
 
+    #transparent-bottom {
+        height: 5rem;
+    }
+
     .skills {
         padding: auto;
     }
