--- a/styles/style.scss
+++ b/styles/style.scss
@@ -282,9 +282,9 @@ ul {
 
 header {
     background: linear-gradient($gradient1, $gradient2);
-    min-height: 80vh;
-    height: 100%;
-    max-height: 100vh;
+    // min-height: 80vh;
+    height: 100vmax;
+    // max-height: 100vh;
     width: 100%;
     overflow: hidden;
     .position-fixed {
@@ -359,7 +359,7 @@ header {
     section {
         position: relative;
         width: 100%;
-        height: 100vh;
+        height: 100vmax;
         display: flex;
         justify-content: center;
         align-items: center;
